--- a/templates/fping-table.html
+++ b/templates/fping-table.html
@@ -3,9 +3,9 @@
               <tr>
                 <th>Hostnaam</th>
                 <th>IPnummer</th>
-                <th>Min.</th>
+                <th>Min</th>
                 <th>Mediaan</th>
-                <th>Max.</th>
+                <th>Max</th>
                 <th>Metingen</th>
               </tr>
             </thead>
