--- a/templates/fping-index.html
+++ b/templates/fping-index.html
@@ -1,186 +1,131 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-    <meta charset="utf-8">
-    <title>Reinier de Graaf netwerk - Dashboard</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-    <!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/bootstrap-glyphicons.css" rel="stylesheet" media="screen">
-    <!-- Le styles -->
-    <link href="css/style.css" rel="stylesheet">
-    
+<html lang="nl">
+<head>
+  <meta charset="utf-8">
+  <title>Reinier de Graaf netwerk - Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <link rel="stylesheet" href="css/jquery-ui-1.8.16.custom.css" media="screen"  />
-    <link rel="stylesheet" href="css/fullcalendar.css" media="screen"  />
-    <link rel="stylesheet" href="css/chosen.css" media="screen"  />
-    <link rel="stylesheet" href="css/glisse.css?1.css">
-    <link rel="stylesheet" href="css/jquery.jgrowl.css">
-    <link rel="stylesheet" href="css/demo_table.css" >
-    <link rel="stylesheet" href="css/jquery.fancybox.css?v=2.1.4" media="screen" />
-    
-	  <link rel="stylesheet" href="css/icon/font-awesome.css">    
-  
-    
-    <link rel="alternate stylesheet" type="text/css" media="screen" title="green-theme" href="css/color/green.css" />
-	  <link rel="alternate stylesheet" type="text/css" media="screen" title="red-theme" href="css/color/red.css" />
-	  <link rel="alternate stylesheet" type="text/css" media="screen" title="blue-theme" href="css/color/blue.css" />
-    <link rel="alternate stylesheet" type="text/css" media="screen" title="orange-theme" href="css/color/orange.css" />
-    <link rel="alternate stylesheet" type="text/css" media="screen" title="purple-theme" href="css/color/purple.css" />
+  <!-- Bootstrap & styles -->
+  <link href="{{ STATIC_BASE }}/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="{{ STATIC_BASE }}/css/bootstrap-glyphicons.css" rel="stylesheet" media="screen">
+  <link href="{{ STATIC_BASE }}/css/style.css" rel="stylesheet">
+  <link href="{{ STATIC_BASE }}/css/jquery-ui-1.8.16.custom.css" rel="stylesheet">
+  <link href="{{ STATIC_BASE }}/css/fullcalendar.css" rel="stylesheet">
+  <link href="{{ STATIC_BASE }}/css/chosen.css" rel="stylesheet">
+  <link href="{{ STATIC_BASE }}/css/glisse.css?1.css" rel="stylesheet">
+  <link href="{{ STATIC_BASE }}/css/jquery.jgrowl.css" rel="stylesheet">
+  <link href="{{ STATIC_BASE }}/css/demo_table.css" rel="stylesheet">
+  <link href="{{ STATIC_BASE }}/css/jquery.fancybox.css?v=2.1.4" rel="stylesheet">
+  <link href="{{ STATIC_BASE }}/css/icon/font-awesome.css" rel="stylesheet">
 
-    <script language="JavaScript">
-	Firefox = navigator.userAgent.indexOf("Firefox") >= 0;
-	if(Firefox) document.write("<link rel='stylesheet' href='css/moz.css' type='text/css'>"); 
-	</script>
-    
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="favicon.ico">
-    
-  </head>
+  <!-- Theme colors -->
+  <link rel="alternate stylesheet" title="green-theme" href="{{ STATIC_BASE }}/css/color/green.css">
+  <link rel="alternate stylesheet" title="red-theme" href="{{ STATIC_BASE }}/css/color/red.css">
+  <link rel="alternate stylesheet" title="blue-theme" href="{{ STATIC_BASE }}/css/color/blue.css">
+  <link rel="alternate stylesheet" title="orange-theme" href="{{ STATIC_BASE }}/css/color/orange.css">
+  <link rel="alternate stylesheet" title="purple-theme" href="{{ STATIC_BASE }}/css/color/purple.css">
 
-  <body>
-    <!--BEGIN HEADER-->
-    <div id="header" role="banner">
-       <a id="menu-link" class="head-button-link menu-hide" href="#menu"><span>Menu</span></a>
-       <!--Logo--><a href="index.html">
-                    <div class="pagetitle">
-                        <h1>RTT and LOSS</h1> 
-                        <div class="clearfix"></div></a>
-                    </div>
-        <!--Logo END-->
-       
-       <div class="right">
-       
-       <!--config box-->
-         <div class="dropdown left">
-          <a class="dropdown-toggle head-button-link config" data-toggle="dropdown" href="#"></a>
-          <div class="dropdown-menu pull-right settings-box">
+  <script>
+    Firefox = navigator.userAgent.indexOf("Firefox") >= 0;
+    if (Firefox)
+      document.write("<link rel='stylesheet' href='{{ STATIC_BASE }}/css/moz.css' type='text/css'>");
+  </script>
+
+  <link rel="shortcut icon" href="{{ STATIC_BASE }}/favicon.ico">
+</head>
+
+<body>
+  <!-- BEGIN HEADER -->
+  <div id="header" role="banner">
+    <a id="menu-link" class="head-button-link menu-hide" href="#menu"><span>Menu</span></a>
+    <a href="/actief/index.html">
+      <div class="pagetitle">
+        <h1>VLAN460 Commend PRM intercom</h1>
+        <div class="clearfix"></div>
+      </div>
+    </a>
+    <div class="right">
+      <div class="dropdown left">
+        <a class="dropdown-toggle head-button-link config" data-toggle="dropdown" href="#"></a>
+        <div class="dropdown-menu pull-right settings-box">
           <div class="triangle-2"></div>
-          
-            <a href="javascript:chooseStyle('none', 30)" class="settings-link"></a>
-            <a href="javascript:chooseStyle('blue-theme', 30)" class="settings-link blue"></a>
-            <a href="javascript:chooseStyle('green-theme', 30)" class="settings-link green"></a>
-            <a href="javascript:chooseStyle('purple-theme', 30)" class="settings-link purple"></a>
-            <a href="javascript:chooseStyle('orange-theme', 30)" class="settings-link yellow"></a>
-            <a href="javascript:chooseStyle('red-theme', 30)" class="settings-link red"></a>
+          <a href="javascript:chooseStyle('none', 30)" class="settings-link"></a>
+          <a href="javascript:chooseStyle('blue-theme', 30)" class="settings-link blue"></a>
+          <a href="javascript:chooseStyle('green-theme', 30)" class="settings-link green"></a>
+          <a href="javascript:chooseStyle('purple-theme', 30)" class="settings-link purple"></a>
+          <a href="javascript:chooseStyle('orange-theme', 30)" class="settings-link yellow"></a>
+          <a href="javascript:chooseStyle('red-theme', 30)" class="settings-link red"></a>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- END HEADER -->
+
+  <div id="wrap">
+    <div id="main" role="main">
+      <div class="block">
+        <div class="clearfix"></div>
+        <div class="grid">
+          <div class="grid-title">
+            <div class="pull-left">
+              <div class="icon-title"><i class="icon-align-justify"></i></div>
+              <span>Status om {{ metadata['startTimePing'] }}</span>
+              <div class="clearfix"></div>
+            </div>
+          </div>
+          <div class="grid-content overflow">
+            {% include 'fping-table.html' %}
             <div class="clearfix"></div>
           </div>
         </div>
-       <!--config box end-->
-       
-       
-       </div>
-       
-      
-    </div>
-    <!--END HEADER-->
-    
-    <div id="wrap">
-    
-        <!--BEGIN MAIN CONTENT-->
-        <div id="main" role="main">
-          <div class="block">
-   		  <div class="clearfix"></div>
-                      
-              <!--Example Table-->
-              <div class="grid">
-              
-              <div class="grid-title">
-               <div class="pull-left">
-                  <div class="icon-title"><i class="icon-align-justify"></i></div>
-                  <span>Status om {{metadata['startTimePing']}}</span> 
-                  <div class="clearfix"></div>
-               </div>
-               <div class="pull-right"> 
-               </div>
-              <div class="clearfix"></div>   
-              </div>
-            
-              <div class="grid-content overflow">
+      </div>
 
-                  {% include 'fping-table.html' %}
-
-                  <div class="clearfix"></div>
-              </div>
+      <!-- BEGIN FOOTER -->
+      <div class="row">
+        <div class="footer">
+          <div class="left">Copyright &copy; {{ now().year }}</div>
+          <div class="right"><a href="#">RTHA IT afdeling</a></div>
+          <div class="clearfix"></div>
         </div>
-              <!--Example Table END-->
-
-             
-        <div class="row">
-               <!--BEGIN FOOTER-->
-               <div class="footer">
-                  <div class="left">Copyright &copy; 2024</div>
-                  <div class="right"><a href="#">Afdeling stafdiensten I&I</a></div>
-                  <div class="clearfix"></div>
-               </div>
-               <!--BEGIN FOOTER END-->
-              
-          <div class="clearfix"></div> 
-          </div><!--end .block-->
-        </div>
-        <!--MAIN CONTENT END-->
-    
+      </div>
+      <!-- END FOOTER -->
     </div>
-    <!--/#wrapper-->
+  </div>
 
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-        <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-   
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/google-code-prettify/prettify.js"></script>
-   
-    <script src="js/jquery.flot.js"></script>
-    <script src="js/jquery.flot.pie.js"></script>
-    <script src="js/jquery.flot.orderBars.js"></script>
-    <script src="js/jquery.flot.resize.js"></script>
-    <script src="js/jquery.flot.categories.js"></script>
-    <script src="js/graphtable.js"></script>
-    <script src="js/fullcalendar.min.js"></script>
-    <script src="js/chosen.jquery.min.js"></script>
-    <script src="js/autoresize.jquery.min.js"></script>
-    <script src="js/jquery.autotab.js"></script>
-    <script src="js/jquery.jgrowl_minimized.js"></script>
-    <script src="js/jquery.dataTables.min.js"></script>
-    <script src="js/jquery.stepy.min.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/raphael.2.1.0.min.js"></script>
-    <script src="js/justgage.1.0.1.min.js"></script>
-	<script src="js/glisse.js"></script>
-	<script src="js/styleswitcher.js"></script>
-	<script src="js/moderniz.js"></script>
-    <script src="js/jquery.sparkline.min.js"></script>
-    <script src="js/slidernav-min.js"></script>
-    <script type="text/javascript" src="js/jquery.fancybox.js?v=2.1.4"></script>
-    
-	<script>
-    Modernizr.load([
-        {
-         load: [
-                'js/main.js'
-            ],
-            complete: function()
-            {
-                $.fn.ready(function()
-                {
-                    window.App.init();
-                });
-            }
-        }
-    ]);
-    </script>
-	<script src="js/application.js"></script>
-    
-    <!--settings infobox charts-->
-    <script src="js/float.settings.infobox.js"></script>
-	
-
-  </body>
+  <!-- JavaScript -->
+  <script src="{{ STATIC_BASE }}/js/jquery.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery-ui.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/bootstrap.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/google-code-prettify/prettify.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.flot.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.flot.pie.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.flot.orderBars.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.flot.resize.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.flot.categories.js"></script>
+  <script src="{{ STATIC_BASE }}/js/graphtable.js"></script>
+  <script src="{{ STATIC_BASE }}/js/fullcalendar.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/chosen.jquery.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/autoresize.jquery.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.autotab.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.jgrowl_minimized.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.dataTables.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.stepy.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.validate.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/raphael.2.1.0.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/justgage.1.0.1.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/glisse.js"></script>
+  <script src="{{ STATIC_BASE }}/js/styleswitcher.js"></script>
+  <script src="{{ STATIC_BASE }}/js/moderniz.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.sparkline.min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/slidernav-min.js"></script>
+  <script src="{{ STATIC_BASE }}/js/jquery.fancybox.js?v=2.1.4"></script>
+  <script src="{{ STATIC_BASE }}/js/main.js"></script>
+  <script src="{{ STATIC_BASE }}/js/application.js"></script>
+  <script src="{{ STATIC_BASE }}/js/float.settings.infobox.js"></script>
+</body>
 </html>
 
